Add Mistral provider, updated docs and assets

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ TOGETHER_API_KEY=your_together_api_key_here
 # OpenRouter API (Optional)
 # Get your API key from: https://openrouter.ai/keys
 OPENROUTER_API_KEY=your_openrouter_api_key_here
+ 
+# Mistral API (Optional)
+# Get your API key from: https://console.mistral.ai/api-keys/
+MISTRAL_API_KEY=your_mistral_api_key_here
 
 
 # Database Configuration (Required if using PostgreSQL)
